--- a/snippets/package.json
+++ b/snippets/package.json
@@ -3,6 +3,7 @@
   "contributes": {
     "snippets": [
       { "language": "rust", "path": "./rust.json" },
+      { "language": "python", "path": "./python.json" },
       { "language": "all", "path": "./all.json" }
     ]
   }
